Cambios para que funcionen los emojis, nuevo panel de emojis  y boton